--- a/com.movistar.ratemovies.Service/com.movistar.ratemovies.Service.csproj
+++ b/com.movistar.ratemovies.Service/com.movistar.ratemovies.Service.csproj
@@ -5,11 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Database\" />
-    <Folder Include="Database\Commands\" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.6" />
+    <Folder Include="Movie\" />
+    <Folder Include="Mappings\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\com.movistar.ratemovies.core\com.movistar.ratemovies.core.csproj" />
