--- a/com.movistar.ratemovies.tests/com.movistar.ratemovies.tests.csproj
+++ b/com.movistar.ratemovies.tests/com.movistar.ratemovies.tests.csproj
@@ -11,6 +11,31 @@
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
+    <PackageReference Include="Shouldly" Version="4.0.3" />
+    <PackageReference Include="coverlet.msbuild" Version="3.0.3">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.6" />
+    <PackageReference Include="Moq" Version="4.16.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="api\" />
+    <Folder Include="core\" />
+    <Folder Include="infrastructure\" />
+    <Folder Include="core\Model\" />
+    <Folder Include="core\Entities\" />
+    <Folder Include="infrastructure\Database\" />
+    <Folder Include="infrastructure\Database\Command\" />
+    <Folder Include="Service\" />
+    <Folder Include="Service\Movie\" />
+    <Folder Include="Service\Mappings\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\com.movistar.ratemovies.api\com.movistar.ratemovies.api.csproj" />
+    <ProjectReference Include="..\com.movistar.ratemovies.core\com.movistar.ratemovies.core.csproj" />
+    <ProjectReference Include="..\com.movistar.ratemovies.infrastructure\com.movistar.ratemovies.infrastructure.csproj" />
+    <ProjectReference Include="..\com.movistar.ratemovies.Service\com.movistar.ratemovies.Service.csproj" />
+  </ItemGroup>
 </Project>
