added RabbitMQ message broker implementation for Movie, added Command and Query implementation for Ratings and Movies, unit tests

--- a/com.movistar.ratemovies.core/com.movistar.ratemovies.core.csproj
+++ b/com.movistar.ratemovies.core/com.movistar.ratemovies.core.csproj
@@ -12,6 +12,8 @@
     <Folder Include="Interface\Database\Command\" />
     <Folder Include="Interface\Database\Query\" />
     <Folder Include="Interface\Services\" />
+    <Folder Include="Interface\MessageBroker\" />
+    <Folder Include="Enums\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
