--- a/com.movistar.ratemovies.Service/com.movistar.ratemovies.Service.csproj
+++ b/com.movistar.ratemovies.Service/com.movistar.ratemovies.Service.csproj
@@ -10,5 +10,11 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\com.movistar.ratemovies.core\com.movistar.ratemovies.core.csproj" />
+    <ProjectReference Include="..\com.movistar.ratemovies.infrastructure\com.movistar.ratemovies.infrastructure.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
   </ItemGroup>
 </Project>
